--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  width: 100%;
+  height: 100vh;
+  display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidepanel {
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.history {
+  width: 60%;
+}
+
+.history-item {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.grid {
+  width: 50%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* width: 400px; */
+  display: grid;
+  grid-template-columns: repeat(20, 20px);
+  grid-template-rows: repeat(20, 20px);
+  /* border: 1px solid gray; */
+}
+.grid-item {
+  background-color: red;
+  border: 0.5px solid #000;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.snake {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  background-color: teal;
 }
