--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,46 @@
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal {
+  position: fixed; 
+  height: 100%; 
+  width: 100vw; 
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.modal-opts {
+  width: '50vh'; 
+  background: rgba(0, 0, 0, 0.9);
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.modal-action-font {
+  color: #f5f5f5;
+  text-align: center;
+}
+
+.modal-opt-fonts {
+  width: 100%;
+  color: #f5f5f5;
+  font-size: 35;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
 }
 
 .sidepanel {
   width: 30%;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,17 +63,16 @@
   justify-content: space-between;
 }
 .grid {
-  width: 50%;
+  width: 70vh;
+  height: 70vh;
   justify-content: center;
-  /* width: 400px; */
   display: grid;
-  grid-template-columns: repeat(20, 20px);
-  grid-template-rows: repeat(20, 20px);
-  /* border: 1px solid gray; */
+  grid-template-columns: repeat(20, calc(100%/20));
+  grid-template-rows: repeat(20, calc(100%/20));
+  border: 0.5px solid #adadad81;
 }
 .grid-item {
   background-color: #cdcdcd;
-  border: 0.5px solid #adadad81;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -52,4 +87,68 @@
   background-color: blue;
   width: 100%;
   height: 100%;
+}
+
+.dir-buttons {
+  display: grid;
+  grid-template-columns: repeat(3, calc(22vw/3));
+  grid-template-rows: repeat(2, calc(22vw/3));
+  column-width: calc(50vw/3);
+  width: calc(50vw/3);
+  background-color: #adadad81;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  width: 30vw;
+  height: 30vw;
+  align-items: center;
+  position: fixed;
+  bottom: -11vw;
+  right: -3vw;
+  padding: 3vw;
+  padding-right: 15vw;
+  padding-bottom: 10vw;
+  display: none;
+}
+
+.dir-arrows{
+  margin: auto;
+  width: 7vw;
+}
+
+.dir-arrows:first-child {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+@media only screen and (max-width: 768px) {
+  .app{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .modal{
+    justify-content: flex-start;
+    padding-top: 20px;
+  }
+  
+  .modal-action-font {
+    font-size: 20px;
+  }
+  
+  .dir-buttons{
+    display: grid;
+  }
+}
+
+@media only screen and (max-width: 426px) {
+  .modal-opts{
+    border-radius: 0;
+    width: 100%;
+  }
+
+  .grid{
+    width: 100%;
+    height: 100vw;
+  }
 }
