--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   align-items: center; 
   justify-content: center;
+  overflow: hidden;
   background: rgba(0, 0, 0, 0.7);
 }
 
@@ -129,7 +130,7 @@
 
   .modal{
     justify-content: flex-start;
-    padding-top: 20px;
+    padding-top: 20vh;
   }
 
   .modal-opts{
